{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 498,
  "lineage": "0935ae8b-407d-851c-5e34-ad035062526b",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/personalhub13/regions/us-central1/networkEndpointGroups/personalhub-fastapi-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "request_coalescing": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-14T15:43:28.162-07:00",
            "enable_cdn": true,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "SD538ZvsxII=",
            "generated_id": 5936391146902144511,
            "id": "projects/personalhub13/global/backendServices/personalhub-fastapi-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "personalhub-fastapi-backend",
            "port_name": "http",
            "project": "personalhub13",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-fastapi-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.iam.google_service_account.fastapi_sa",
            "module.iam.google_service_account.portfolio_sa",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "rstudio",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/personalhub13/regions/us-central1/networkEndpointGroups/personalhub-rstudio-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "request_coalescing": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-07T00:22:02.146-07:00",
            "enable_cdn": true,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "2nFj4M3vmoo=",
            "generated_id": 3396377810517775989,
            "id": "projects/personalhub13/global/backendServices/personalhub-rstudio-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "personalhub-rstudio-backend",
            "port_name": "http",
            "project": "personalhub13",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-rstudio-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.iam.google_service_account.fastapi_sa",
            "module.iam.google_service_account.portfolio_sa",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "www",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/personalhub13/regions/us-central1/networkEndpointGroups/personalhub-www-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "request_coalescing": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-06T05:24:07.534-07:00",
            "enable_cdn": true,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "hGZ2Rp1rsO0=",
            "generated_id": 4991789128248943368,
            "id": "projects/personalhub13/global/backendServices/personalhub-www-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "personalhub-www-backend",
            "port_name": "http",
            "project": "personalhub13",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-www-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.iam.google_service_account.fastapi_sa",
            "module.iam.google_service_account.portfolio_sa",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "cloudsql_peering_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.17.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-06-14T05:03:32.996-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/personalhub13/global/addresses/cloudsql-peering-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cloudsql-peering-range",
            "network": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/networks/personalhub-vpc-net",
            "prefix_length": 16,
            "project": "personalhub13",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/addresses/cloudsql-peering-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.8.70.154",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-06T05:19:27.632-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/personalhub13/global/addresses/lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "lb-ip",
            "prefix_length": 0,
            "project": "personalhub13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/addresses/lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 1495552313260991471,
            "id": "projects/personalhub13/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.8.70.154",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "personalhub13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_global_address.lb_ip",
            "module.network.google_compute_target_http_proxy.http_proxy",
            "module.network.google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 2174281489627177200,
            "id": "projects/personalhub13/global/forwardingRules/https-forwarding-rule",
            "ip_address": "34.8.70.154",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "personalhub13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/forwardingRules/https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/targetHttpsProxies/https-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.iam.google_service_account.fastapi_sa",
            "module.iam.google_service_account.portfolio_sa",
            "module.network.google_compute_backend_service.backend",
            "module.network.google_compute_global_address.lb_ip",
            "module.network.google_compute_managed_ssl_certificate.ssl_certs",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_compute_target_https_proxy.https_proxy",
            "module.network.google_compute_url_map.url_map",
            "module.network.google_vpc_access_connector.run_connector"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/personalhub13/global/networks/personalhub-vpc-net",
            "mtu": 0,
            "name": "personalhub-vpc-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3633396465510867488",
            "numeric_id": "3633396465510867488",
            "project": "personalhub13",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/networks/personalhub-vpc-net"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-15T04:16:57.016-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/241432738087/regions/us-central1/routers/personalhub-router",
            "name": "personalhub-router",
            "network": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/networks/personalhub-vpc-net",
            "project": "241432738087",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/regions/us-central1/routers/personalhub-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "241432738087/us-central1/personalhub-router/personalhub-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "personalhub-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "241432738087",
            "region": "us-central1",
            "router": "personalhub-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-06T05:20:10.671-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.8.0.1",
            "id": "projects/personalhub13/regions/us-central1/subnetworks/personalhub-vpc-subnet",
            "ip_cidr_range": "10.8.0.0/28",
            "name": "personalhub-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/networks/personalhub-vpc-net",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "personalhub13",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/regions/us-central1/subnetworks/personalhub-vpc-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2362695395595739669
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-06T05:20:04.807-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/personalhub13/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "personalhub13",
            "proxy_bind": false,
            "proxy_id": 7198032618962510363,
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/urlMaps/http-redirect"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-06T05:24:51.784-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/personalhub13/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "personalhub13",
            "proxy_bind": false,
            "proxy_id": 4306160739756761340,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/personalhub13/global/sslCertificates/ssl-certs"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/urlMaps/url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.iam.google_service_account.fastapi_sa",
            "module.iam.google_service_account.portfolio_sa",
            "module.network.google_compute_backend_service.backend",
            "module.network.google_compute_managed_ssl_certificate.ssl_certs",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_compute_url_map.url_map",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-06T05:19:23.340-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "U1TgFzWbSpM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/personalhub13/global/urlMaps/http-redirect",
            "map_id": 4242121553307722276,
            "name": "http-redirect",
            "path_matcher": [],
            "project": "personalhub13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/urlMaps/http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-06T05:24:39.909-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-www-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "fhDLj7shh58=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "fastapi.guigo.dev.br"
                ],
                "path_matcher": "fastapi-matcher"
              },
              {
                "description": "",
                "hosts": [
                  "rstudio.guigo.dev.br"
                ],
                "path_matcher": "rstudio-matcher"
              },
              {
                "description": "",
                "hosts": [
                  "www.guigo.dev.br"
                ],
                "path_matcher": "www-matcher"
              }
            ],
            "id": "projects/personalhub13/global/urlMaps/url-map",
            "map_id": 6268159275821916392,
            "name": "url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-www-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "www-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-www-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-fastapi-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "fastapi-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-fastapi-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-rstudio-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "rstudio-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/backendServices/personalhub-rstudio-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "personalhub13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub13/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.iam.google_service_account.fastapi_sa",
            "module.iam.google_service_account.portfolio_sa",
            "module.network.google_compute_backend_service.backend",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}